note クラスにファイルアップロード機能を付与。クラス名変更に関する直し忘れの修正。

--- a/config/locales/attributes.ja.yml
+++ b/config/locales/attributes.ja.yml
@@ -8,23 +8,23 @@ ja:
         worker_id: 担当予定者
         result_id: 点検結果
         processingdate: 処理日
-      record:
+      kiroku:
         worker_id: 記録者
         latitude: 緯度
         longitude: 経度
       check:
-        record_id: 記録番号
+        kiroku_id: 記録番号
         weather_id: 天候
         exterior: 外観
         tone: 色
         stain: 汚れ
       measurement:
-        record_id: 記録番号
+        kiroku_id: 記録番号
         metercount: メーター値
         testervalue: テスター計測値
         point: 評価点
       note:
-        record_id: 記録番号
+        kiroku_id: 記録番号
         memo: 所感
         picture: 写真
       worker:
