--- a/config/locales/views.ja.yml
+++ b/config/locales/views.ja.yml
@@ -1,5 +1,11 @@
 ja:
   views:
+    menu:
+      show:
+        title: メニュー
+        daily_work: 日常業務
+        maintanance_master: マスター登録
+        maintanance_sys: メンテナンス(システム管理者用)
     link_to:
       new: 新規登録
       edit: 更新
@@ -15,6 +21,11 @@ ja:
       new: 設備の登録
       edit: 設備の更新
       show: 設備の確認
+    place:
+      index: 場所の一覧
+      new: 場所の登録
+      edit: 場所の更新
+      show: 場所の確認
     kiroku:
       index: 記録一覧
       new: 記録の登録
@@ -26,3 +37,13 @@ ja:
       show: 計測結果の確認
     note:
       show: その他記録の確認
+    division:
+      index: 部署の一覧
+      new: 部署の登録
+      edit: 部署の更新
+      show: 部署の確認
+    worker:
+      index: 作業者の一覧
+      new: 作業者の登録
+      edit: 作業者の更新
+      show: 作業者の確認
