めにゅーにおしらせを表示する機能を作ってみた。

--- a/config/locales/attributes.ja.yml
+++ b/config/locales/attributes.ja.yml
@@ -36,3 +36,7 @@ ja:
         place_id: 設置場所
         division_id: 管轄
         last_update: 最終更新日時
+      infomsg:
+        effective_date: 発効日
+        title: タイトル
+        description: 内容
