--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,13 @@
 == README
 
-# 概要
+== 概要
 
 kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付けられた、
 設備の点検予定と点検記録を管理するアプリケーションです。 
 
-# 用語(主なクラス)
-## 設備(Equipment)  
+== 用語(主なクラス)
+
+=== 設備(Equipment)  
  点検対象の設備です。  
  なお、設置場所、種類、管轄は登録されている一覧から選択します。
  新しい設置場所を選びたい場合は、メニューの
@@ -14,23 +15,23 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
  から登録しておく必要があります。  
  管轄の選択肢には部署(Division)が出ます。
 
-##点検(Inspection)  
+=== 点検(Inspection)  
   設備に対する点検(予定/実績)です。  
   年に一度点検を行うことを想定しており、メニューの
   [管理業務]→[設備一覧(点検予定なし)]
   で、過去一年の間に点検が無い設備の一覧が出ます。
 
-## 記録(Kiroku)  
+=== 記録(Kiroku)  
   点検の記録です。点検に対して複数の記録を作れます。  
   チェックする項目(Check)、計測する項目(Measurement)、その他メモなど(Note)
   の三種類があります。
 
-# version
+== version
 
 * Ruby : 2.1.x
 * Rails : 4.1.x
  
-# 動かしてみるには？
+== 動かしてみるには？
 
 1. master ブランチから git clone してください。
 2. bundle install
@@ -40,9 +41,9 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 5. rails s
  * localhost:3000 などにアクセスすればトップ画面が表示されます。
 
-# 使い方
+== 使い方
 
-## 点検記録を付けるとき
+=== 点検記録を付けるとき
 * トップ画面の[点検一覧]をクリック→点検一覧画面に遷移
 * 適当な設備を選んで[点検開始]をクリック→点検開始画面に遷移
  * 位置情報を利用して良いかどうかを訊かれるので答える(使えませんと言われる場合もある)
@@ -53,7 +54,7 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 * 画面下部の[点検一覧]をクリック→点検一覧画面に戻る
 
 
-## 点検を完了するとき
+=== 点検を完了するとき
 * トップ画面の[点検一覧]をクリック→点検一覧画面に遷移
  * 点検記録を付けた後[点検一覧]のクリックで戻ってる場合はこの操作は不要
 * [進捗状況]が[実施中]の点検に[点検の完了]リンクがあるので、
@@ -64,8 +65,8 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 * [点検の確認]画面に登録結果が表示される(署名も表示される)
 * 画面下部の[Back]をクリック→点検一覧画面に戻る
 
-## おしらせ機能
-###登録するとき
+=== おしらせ機能
+==== 登録するとき
 * トップ画面上部の[おしらせの一覧]をクリック→おしらせの一覧画面に遷移
 * [おしらせの登録]クリック→おしらせの新規登録画面に遷移
 * おしらせの内容を入力後[AdminPassWord]欄にパスワードを入力
@@ -74,28 +75,28 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
      production 環境では環境変数 KILOGY_ADMN_PW の値になります。
 * [登録する]クリックで登録
 
-### 削除するとき
+==== 削除するとき
 * トップ画面上部の[おしらせの一覧]をクリック→おしらせの一覧画面に遷移
 * 削除したいおしらせの[show]をクリック→おしらせの詳細画面に遷移
 * [AdminPassWord]欄にパスワードを入力
   * パスワードについては登録と同様
 * [削除]クリックで削除される
 
-## 問い合わせ機能
-簡易的掲示板機能を付けてあります。
+=== 問い合わせ機能
+簡易的な掲示板機能を付けてあります。
 ちょっとした質疑応答やFAQなどに使えます。  
 
-# 開発者の方へ
+== 開発者の方へ
 
-## ブランチについて
+=== ブランチについて
 
-### master
+==== master
 * herokuでの動作確認をしたものをmasterブランチに置いています。
 
-### develop
+==== develop
 * herokuに上げる前のマージ用に使っているブランチです。
 * プルリクエストを下さる場合は(当面)このブランチ宛でお願いします。
  * そのうち変えるかもしれませんが、とりあえず暫定ってことで。
 
-### work
+==== work
 * yamadashizuka の作業ブランチです、そっとしておいてください。
