--- a/README.rdoc
+++ b/README.rdoc
@@ -37,9 +37,10 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 2. bundle install
 3. rake db:migrate
 4. rake db:seed
- * マスター系のテーブルに一通りのデータが入るのでテスト的に動かしてみることができます。
 5. rails s
- * localhost:3000 などにアクセスすればトップ画面が表示されます。
+
+ これでマスター系のテーブルに一通りのデータが入るのでテスト的に動かしてみることができます。
+ localhost:3000 などにアクセスすればトップ画面が表示されます。
 
 == 使い方
 
