インデントとかが変だったのでちょっと修正

--- a/README.rdoc
+++ b/README.rdoc
@@ -47,22 +47,21 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 === 点検記録を付けるとき
 * トップ画面の[点検一覧]をクリック→点検一覧画面に遷移
 * 適当な設備を選んで[点検開始]をクリック→点検開始画面に遷移
- * 位置情報を利用して良いかどうかを訊かれるので答える(使えませんと言われる場合もある)
+  * 位置情報を利用して良いかどうかを訊かれるので答える(使えませんと言われる場合もある)
 * [チェック結果][計測結果][その他記録]のタブを切り替えて点検結果を入力
 * [点検記録登録]ボタンを押下
- * その他記録で写真を指定しているとアップロードに時間がかかる場合があるので注意
+  * その他記録で写真を指定しているとアップロードに時間がかかる場合があるので注意
 * [記録の確認]画面で登録結果が表示される(位置情報については地図上に表示される)
 * 画面下部の[点検一覧]をクリック→点検一覧画面に戻る
 
 
 === 点検を完了するとき
 * トップ画面の[点検一覧]をクリック→点検一覧画面に遷移
- * 点検記録を付けた後[点検一覧]のクリックで戻ってる場合はこの操作は不要
-* [進捗状況]が[実施中]の点検に[点検の完了]リンクがあるので、
-  完了したい点検の[点検の完了]をクリック→点検の完了画面に遷移
- * 実施中ではないもの([実施待ち]や[完了])については[点検の完了]が表示されない
+  * 点検記録を付けた後[点検一覧]のクリックで戻ってる場合はこの操作は不要
+* [進捗状況]が[実施中]の点検に[点検の完了]リンクがあるので、完了したい点検の[点検の完了]をクリック→点検の完了画面に遷移
+  * 実施中ではないもの([実施待ち]や[完了])については[点検の完了]が表示されない
 * [署名]欄に署名し、[点検完了(承認)]をクリック
- * 署名欄の下にある[クリア]をクリックすれば書き直せる
+  * 署名欄の下にある[クリア]をクリックすれば書き直せる
 * [点検の確認]画面に登録結果が表示される(署名も表示される)
 * 画面下部の[Back]をクリック→点検一覧画面に戻る
 
@@ -71,9 +70,8 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 * トップ画面上部の[おしらせの一覧]をクリック→おしらせの一覧画面に遷移
 * [おしらせの登録]クリック→おしらせの新規登録画面に遷移
 * おしらせの内容を入力後[AdminPassWord]欄にパスワードを入力
- * パスワードは config/secrets.yml の infomsg_admn_pass です。
-   * development 環境では上記ファイルに書いてある値、
-     production 環境では環境変数 KILOGY_ADMN_PW の値になります。
+  * パスワードは config/secrets.yml の infomsg_admn_pass です。
+   * development 環境では上記ファイルに書いてある値、production 環境では環境変数 KILOGY_ADMN_PW の値になります。
 * [登録する]クリックで登録
 
 ==== 削除するとき
@@ -97,7 +95,7 @@ kilogy(キロギー)は、記録＋ログ（＋コーギー犬）から名付け
 ==== develop
 * herokuに上げる前のマージ用に使っているブランチです。
 * プルリクエストを下さる場合は(当面)このブランチ宛でお願いします。
- * そのうち変えるかもしれませんが、とりあえず暫定ってことで。
+  * そのうち変えるかもしれませんが、とりあえず暫定ってことで。
 
 ==== work
 * yamadashizuka の作業ブランチです、そっとしておいてください。
